in about, fix gallery direct

--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,7 @@
 		  <p>I favor using nodejs and AWS</p>
 		  <p>I prefer tea instead of coffee</p>
 		  <p>No dev exp aside from autonomous deployments</p>
-		  <p>presented in <a href="/gallery" target="_blank">Gallery</a></p>
+		  <p>presented in <a href="/gallery">Gallery</a></p>
 		  <p>and <a href="https://github.com/Alvarian/INTRO" target="_blank">Github</a></p>
 		</div>
 
