mail field in conditions

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,7 +4,8 @@
 
 	<h1>Contact</h1>
 	<form action="/contact" method="POST">
-		<input name="email" type="email" placeholder="Input your email">
+		<input name="name" type="text" placeholder="Your name">
+		<input name="email" type="email" placeholder="Your email">
 		<textarea name="message" id="" cols="30" rows="10" placeholder="Whats Up?"></textarea>
 		<input type="submit" value="Submit">
 	</form>
