centralize contact form

--- a/templates/about.html
+++ b/templates/about.html
@@ -19,13 +19,14 @@
 		</div>
 
 		<div class="down" style="display: flex; align-items: center; justify-content: center; flex: 1; margin: 0 20px;">
-		  <h1 style="text-align: center; width: 100%"><a href="https://i.pinimg.com/originals/bc/c2/3c/bcc23c62544224bc5133a8f0b728fc99.jpg">resume</a></h1>
+		  <!-- <h1 style="text-align: center; width: 100%"><a href="https://i.pinimg.com/originals/bc/c2/3c/bcc23c62544224bc5133a8f0b728fc99.jpg">resume</a></h1> -->
+		  <img class="border" style="height: 100%; width: 65%; min-width: 350px" src="{{ url_for('static', filename='images/resume_icon.png') }}" alt="">
 		</div>
 
 	  </div>
 	</div>
 
-	<div class="float" style="display: flex; justify-content: space-around;">
+	<div class="float" style="display: flex; justify-content: space-around; margin-top: 70px">
 	  <div class="bord">
 		<h2>Commonly Used</h2>
 		<div class="loopUsed"></div>
