--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -1,14 +1,17 @@
 <nav class="row spaced amatic">
 	<div class="menu lrg">
-		<div class="row spaced">
-			<div><a href="/" class="icon med">/</a></div>
-			<div><a href="/gallery">/gallery</a></div>
-			<div><a href="/contact">/contact</a></div>
-		{% if session.logged_in %}
-			<div><a href="/portal">/portal</a></div>
+		<div style="display: flex; justify-content: space-between;">
+			<div>Ivan Alvarez</div>
+			<div style="display: flex; justify-content: space-between; width: 50%">
+				<div><a href="/" class="icon med">/</a></div>
+				<div><a href="/gallery">/gallery</a></div>
+				<div><a href="/contact">/contact</a></div>
+			{% if session.logged_in %}
+				<div><a href="/portal">/portal</a></div>
 
-			<div><a href="/logout">/logout</a></div>
-		{% endif %}
+				<div><a href="/logout">/logout</a></div>
+			{% endif %}
+			</div>
 		</div>
 	</div>
 </nav>
