--- a/static/main.css
+++ b/static/main.css
@@ -37,6 +37,7 @@
 	font-family: 'Orbitron', sans-serif;	
 	background-color: white;
 	width: 100%;
+	text-align: center;
 }
 .synop {
 	width: 200px;
