--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,12 +2,14 @@
 
 {% block body %}
 
-	<h1>Contact</h1>
-	<form action="/contact" method="POST">
-		<input name="name" type="text" placeholder="Your name">
-		<input name="email" type="email" placeholder="Your email">
-		<textarea name="message" id="" cols="30" rows="10" placeholder="Whats Up?"></textarea>
-		<input type="submit" value="Submit">
-	</form>
+	<div style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+		<h1 class="orb">Contact</h1>
+		<form style="display: flex; flex-direction: column;" action="/contact" method="POST">
+			<input name="name" type="text" placeholder="Your name">
+			<input name="email" type="email" placeholder="Your email">
+			<textarea name="message" id="" cols="30" rows="10" placeholder="Whats Up?"></textarea>
+			<input type="submit" value="Submit">
+		</form>
+	</div>
 
 {% endblock %}	
