--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -4,7 +4,8 @@
 			<div>Ivan Alvarez</div>
 			<div style="display: flex; justify-content: space-between; width: 55%">
 				<div><a href="/" class="icon med">/</a></div>
-				<div><a href="/gallery">/gallery</a></div>
+				<div><a href="/hobbies">/hobbies</a></div>
+				<div><a href="/projects">/projects</a></div>
 				<div><a href="/contact">/contact</a></div>
 			{% if session.logged_in %}
 				<div><a href="/portal">/portal</a></div>
