--- a/templates/hobbies.html
+++ b/templates/hobbies.html
@@ -19,16 +19,7 @@
 			</div>
 		</div>
 	</nav>
-	<div style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
-		<h1 class="orb">Contact</h1>
-		{% include 'includes/_messages.html' %}
-		
-		<form style="display: flex; flex-direction: column; width: 40%;" action="/contact" method="POST">
-			<input name="name" type="text" placeholder="Your name">
-			<input name="email" type="email" placeholder="Your email">
-			<textarea name="message" id="" cols="30" rows="10" placeholder="Whats Up?"></textarea>
-			<input type="submit" value="Submit">
-		</form>
-	</div>
 
-{% endblock %}	
+	<h1 class="orb" style="text-align: center;">Hobby Gallery</h1>
+
+{% endblock %}
