--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,26 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<h1 class="orb" style="text-align: center;">Gallery</h1>
+<nav class="row spaced amatic">
+	<div class="menu lrg">
+		<div style="display: flex; justify-content: space-between;">
+			<div>Ivan Alvarez</div>
+			<div style="display: flex; justify-content: space-between; width: 55%">
+				<div><a href="/" class="icon med">/</a></div>
+				<div><a href="/hobbies">/hobbies</a></div>
+				<div><a href="/projects">/projects</a></div>
+				<div><a href="/contact">/contact</a></div>
+			{% if session.logged_in %}
+				<div><a href="/portal">/portal</a></div>
+
+				<div><a href="/logout">/logout</a></div>
+			{% endif %}
+			</div>
+		</div>
+	</div>
+</nav>
+
+<h1 class="orb" style="text-align: center;">Project Gallery</h1>
 <div id="app" class="row">
 	<div class="synop">
 		<h2 class="orb">Synopsis</h2>
