--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,33 +1,33 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-	<nav class="row spaced amatic">
+	<nav class="row spaced barcode" style="background-color: black; color: white;">
 		<div class="menu lrg">
-			<div style="display: flex; justify-content: space-between;">
+			<div style="display: flex; justify-content: space-between; font-size: 30pt;">
 				<div>Ivan Alvarez</div>
-				<div style="display: flex; justify-content: space-between; width: 55%">
-					<div><a href="/" class="icon med">/</a></div>
-					<div><a href="/hobbies">/hobbies</a></div>
-					<div><a href="/projects">/projects</a></div>
-					<div><a href="/contact">/contact</a></div>
+				<div style="display: flex; justify-content: space-between; width: 55%;">
+					<div><a href="/" class="icon med">_about</a></div>
+					<div><a href="/hobbies">_hobbies</a></div>
+					<div><a href="/projects">_projects</a></div>
 				{% if session.logged_in %}
-					<div><a href="/portal">/portal</a></div>
+					<div><a href="/portal">_portal</a></div>
 
-					<div><a href="/logout">/logout</a></div>
+					<div><a href="/logout">_logout</a></div>
 				{% endif %}
 				</div>
 			</div>
 		</div>
 	</nav>
-	<div style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
-		<h1 class="orb">Contact</h1>
+
+	<div style="display: flex; flex-direction: column; align-items: center; justify-content: center; background-image: url('{{ url_for('static', filename='images/img_highest.jpg') }}'); height: 99%; background-repeat: no-repeat; background-size: cover;">
+		<h1 class="amatic">Contact</h1>
 		{% include 'includes/_messages.html' %}
 		
 		<form style="display: flex; flex-direction: column; width: 40%;" action="/contact" method="POST">
-			<input name="name" type="text" placeholder="Your name">
-			<input name="email" type="email" placeholder="Your email">
-			<textarea name="message" id="" cols="30" rows="10" placeholder="Whats Up?"></textarea>
-			<input type="submit" value="Submit">
+			<input class="amatic" style="font-size: 22pt;  color: white; background-color: rgba(0,0,0,0.6);" name="name" type="text" placeholder="Your name">
+			<input class="amatic" style="font-size: 22pt;  color: white; background-color: rgba(0,0,0,0.6);" name="email" type="email" placeholder="Your email">
+			<textarea class="amatic" style=" color: white; background-color: rgba(0,0,0,0.6);" name="message" id="" cols="30" rows="10" placeholder="Whats Up?"></textarea>
+			<input class="amatic" style="font-size: 22pt;  color: white; background-color: rgba(0,0,0,0.6);" type="submit" value="Submit">
 		</form>
 	</div>
 
