--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,6 +38,9 @@
         display: flex;
         flex-direction: column;
       }
+    html {
+      height: 100%;
+    }
 	</style>  
 </head>
 <body>
