remove redun nav file. complete nav in proj and contact

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 <div id="app" class="row">
 	<div class="synop">
 		<h2 class="orb">Synopsis</h2>
-		<div style="height: 70%;" class="amatic betweened" v-show="synop">
+		<div style="height: 70%;" class="pressStart betweened" v-show="synop">
 			<div>
 				<h3 class="title"></h3>
 				<p class="article"></p>
