--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='modalbox.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='flexbox.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
-	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Libre+Barcode+39+Text|Orbitron|Press+Start+2P|Ruge+Boogie" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Libre+Barcode+39+Text|Orbitron|Press+Start+2P|Ruge+Boogie|Gloria+Hallelujah|Indie+Flower|Play|Source+Code+Pro" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 	<script
@@ -25,6 +25,12 @@
         max-width: 300px;
         min-width: 300px;
       }  
+    .naver {
+      display: flex; 
+      justify-content: space-between; 
+      flex-wrap: wrap;
+      width: 35%;
+    }
 	  .badges {
         margin: 5px;
       }
@@ -40,6 +46,7 @@
       }
     html {
       height: 100%;
+
     }
 	</style>  
 </head>
