--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,21 @@
+.school, .purp {
+	position: relative;
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+}
+.school {
+	background-image: url('./images/img_class.jpg');
+	min-height: 100vh;
+}
+
+.purp {
+	background-image: url('./images/img_clock1.jpg');
+	min-height: 400px;
+	width: 100%;
+}
+
 .card {
 	border-style: double;
 	border-width: 5px;
@@ -33,8 +51,7 @@
 .upbutt:hover {
 	background-color: grey;
 }
-.orb {
-	font-family: 'Orbitron', sans-serif;	
+.orb {	
 	background-color: white;
 	width: 100%;
 	text-align: center;
@@ -60,6 +77,21 @@
 .amatic {
 	font-family: 'Amatic SC', cursive;
 }
+.play {
+	font-family: 'Play', sans-serif;	
+}
+.orbi {
+	font-family: 'Orbitron', sans-serif;	
+}
+.ruge {
+	font-family: 'Ruge Boogie', cursive;
+}
+.indie {
+	font-family: 'Indie Flower', cursive;
+}
+.codepro {
+	font-family: 'Source Code Pro', monospace;	
+}
 body, html {
 	background-color: lightgrey;
 	margin: 0;
@@ -75,3 +107,7 @@ font-family: 'Amatic SC', cursive;
 font-family: 'Orbitron', sans-serif;
 font-family: 'Ruge Boogie', cursive;
 font-family: 'Press Start 2P', cursive;*/
+/*font-family: 'Indie Flower', cursive;
+font-family: 'Gloria Hallelujah', cursive;
+font-family: 'Play', sans-serif;
+font-family: 'Source Code Pro', monospace;*/
