--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
 	<div class="menu lrg">
 		<div style="display: flex; justify-content: space-between;">
 			<div>Ivan Alvarez</div>
-			<div style="display: flex; justify-content: space-between; width: 55%">
+			<div class="naver">
 				<div><a href="/" class="icon med">/about</a></div>
-				<div><a href="/hobbies">/hobbies</a></div>
+				<!-- <div><a href="/hobbies">/hobbies</a></div> -->
 				<div><a href="/contact">/contact</a></div>
 			{% if session.logged_in %}
 				<div><a href="/portal">/portal</a></div>
@@ -19,10 +19,10 @@
 	</div>
 </nav>
 
-<h1 class="orb" style="text-align: center;">Project Gallery</h1>
+<h1 class="orb codepro" style="text-align: center;">Project Gallery</h1>
 <div id="app" class="row">
 	<div class="synop">
-		<h2 class="orb">Synopsis</h2>
+		<h2 class="orb codepro">Synopsis</h2>
 		<div style="height: 70%;" class="pressStart betweened" v-show="synop">
 			<div>
 				<h3 class="title"></h3>
