--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,12 +1,12 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-	<nav class="row spaced barcode" style="background-color: black; color: white;">
+	<nav class="row spaced barcode" style="background-color: black; color: white; position: absolute;">
 		<div class="menu lrg">
 			<div style="display: flex; justify-content: space-between; font-size: 30pt; flex-wrap: wrap;">
 				<div style="margin-right: 100px">Ivan Alvarez</div>
 				<div class="naver">
-					<div><a href="/" class="icon med">_about</a></div>
+					<div><a href="/" class="med">_about</a></div>
 					<!-- <div><a href="/hobbies">_hobbies</a></div> -->
 					<div><a href="/projects">_projects</a></div>
 				{% if session.logged_in %}
@@ -19,7 +19,7 @@
 		</div>
 	</nav>
 
-	<div style="display: flex; flex-direction: column; align-items: center; justify-content: center; background-image: url('{{ url_for('static', filename='images/img_highest.jpg') }}'); height: 100%; background-repeat: no-repeat; background-size: cover;">
+	<div style="display: flex; flex-direction: column; align-items: center; justify-content: center; background-image: url('{{ url_for('static', filename='images/img_highest.jpg') }}'); height: 100vh; background-repeat: no-repeat; background-size: cover;">
 		<h1 class="orbi">Contact</h1>
 		{% include 'includes/_messages.html' %}
 		
