--- a/templates/about.html
+++ b/templates/about.html
@@ -21,7 +21,7 @@
 		</nav>
 
 	  <div class="school" style="display: flex; justify-content: center; align-items: center;">
-	  	<h1 style="text-align: center; margin: 0; font-size: 34pt;">Introducing...</h1>
+	  	<h1 style="text-align: center; margin: 0; font-size: 34pt;">Welcome and ...</h1>
 	  </div>
 
 	  <div style="justify-content: center; display: flex; flex-direction: column; align-items: center; width: 100%;">
@@ -46,9 +46,12 @@
 			  <p><a style="font-size: 16pt; cursor: pointer; border: solid 1px black;" href="/contact">Contact me</a></p>
 			</div>
 			<div id="modal" style="display: none;">
-				<div class="modal-content" style="display: flex; justify-content: center;">
+				<div class="modal-content" style="display: flex; justify-content: center; max-width: 400px; max-height: 560px;">
 					<span class="clsbtn orbi" style="cursor: pointer;">X</span>
 					<img style="min-width: 200px" src="https://i.pinimg.com/originals/bc/c2/3c/bcc23c62544224bc5133a8f0b728fc99.jpg" alt="">
+				</div>
+				<div style="width: 100%; display: flex; justify-content: center;">
+					<a href="{{ url_for('static', filename='images/resume_icon.png') }}" download><i class="fas fa-file-download fa-3x"></i></a>
 				</div>
 			</div>
 			<script>
