--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 	<div class="amatic" id="top">
-		<nav class="row spaced" style="background-color: black; color: white; font-size: 26pt;">
+		<nav class="row spaced" style="background-color: black; color: white; font-size: 36pt;">
 			<div class="menu lrg">
 				<div style="display: flex; justify-content: space-between;">
 					<div>Ivan Alvarez</div>
@@ -33,7 +33,7 @@
 				</div>
 				<div style="min-width: 150px; font-size: 16pt; margin-top: 20px">
 				  <span style="font-size: 50pt; float: left; margin-right: 20px;">Hi</span>
-				  Im a fullstack webdev
+				  Im Ivan, a webdev
 				  <p>I favor using nodejs and AWS</p>
 				  <p>I prefer tea instead of coffee</p>
 				  <p>No dev exp aside from autonomous deployments</p>
@@ -88,7 +88,7 @@
 	  		<h1 style="text-align: center; margin: 0; font-size: 34pt; color: wheat">Incorporated...</h1>
 		</div>
 
-		<div class="float" style="display: flex; justify-content: space-around; margin-top: 70px; padding: 0px 50px;">
+		<div class="float" style="display: flex; justify-content: space-around; margin: 70px 30px;">
 		  <div class="bord">
 			<h2>Commonly Used</h2>
 			<div class="loopUsed"></div>
@@ -106,9 +106,16 @@
 	  </div>
 	</div>
 
-	<h1 class="footsies">
-		<a href="#top">^</a>
-	</h1>
+	<div style="position: relative;">
+		<div style="position: absolute;" class="theLib"></div>
+		<div style="display: flex; justify-content: center; align-items: center; width: 100%;">
+			<div style="display: flex; justify-content: space-around; align-items: center; min-height: 400px; width: 70%; flex-wrap: wrap; z-index: 1">
+				<a href="" class="circle"><i class="fab fa-github"></i></a>
+				<a href="" class="circle"><i class="fab fa-linkedin-in"></i></a>
+				<a href="" class="circle"><i class="fas fa-arrow-up"></i></a>
+			</div>
+		</div>
+	</div>
 
   <script>
 	console.log('app start');
