--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 		<div style="display: flex; justify-content: space-between;">
 			<div>Ivan Alvarez</div>
 			<div class="naver">
-				<div><a href="/" class="icon med">/about</a></div>
+				<div><a href="/" class="med">/about</a></div>
 				<!-- <div><a href="/hobbies">/hobbies</a></div> -->
 				<div><a href="/contact">/contact</a></div>
 			{% if session.logged_in %}
