--- a/templates/about.html
+++ b/templates/about.html
@@ -110,8 +110,8 @@
 		<div style="position: absolute;" class="theLib"></div>
 		<div style="display: flex; justify-content: center; align-items: center; width: 100%;">
 			<div style="display: flex; justify-content: space-around; align-items: center; min-height: 400px; width: 70%; flex-wrap: wrap; z-index: 1">
-				<a href="" class="circle anchor"><i class="fab fa-github"></i></a>
-				<a href="" class="circle anchor"><i class="fab fa-linkedin-in"></i></a>
+				<a href="https://github.com/Alvarian/INTRO" class="circle anchor" target="_blank"><i class="fab fa-github"></i></a>
+				<a href="https://www.linkedin.com/in/alvarezivan88/" class="circle anchor" target="_blank"><i class="fab fa-linkedin-in"></i></a>
 				<a class="circle anchor scrollUp"><i class="fas fa-arrow-up"></i></a>
 			</div>
 		</div>
