full scrn resume page

--- a/templates/about.html
+++ b/templates/about.html
@@ -51,7 +51,7 @@
 					<img style="min-width: 200px" src="https://i.pinimg.com/originals/bc/c2/3c/bcc23c62544224bc5133a8f0b728fc99.jpg" alt="">
 				</div>
 				<div style="width: 100%; display: flex; justify-content: center;">
-					<a href="{{ url_for('static', filename='images/resume_icon.png') }}" download><i class="fas fa-file-download fa-3x"></i></a>
+					<a href="" download><i class="fas fa-file-download fa-3x"></i></a>
 				</div>
 			</div>
 			<script>
