full scrn resume page

--- a/templates/about.html
+++ b/templates/about.html
@@ -45,7 +45,7 @@
 			  <p><span id="btn" style="font-size: 16pt; cursor: pointer; border: solid 1px black;">View my resume</span></p>
 			  <p><a style="font-size: 16pt; cursor: pointer; border: solid 1px black;" href="/contact">Contact me</a></p>
 			</div>
-			<div id="modal" style="display: none; height: 99vh">
+			<div id="modal" style="display: none; max-height: 100vh">
 				<div class="modal-content" style="display: flex; justify-content: center; max-width: 400px; max-height: 560px;">
 					<span class="clsbtn orbi" style="cursor: pointer;">X</span>
 					<img style="min-width: 200px" src="https://i.pinimg.com/originals/bc/c2/3c/bcc23c62544224bc5133a8f0b728fc99.jpg" alt="">
