--- a/templates/about.html
+++ b/templates/about.html
@@ -49,8 +49,9 @@
 				<div class="modal-content" style="display: flex; justify-content: center; max-width: 400px; max-height: 560px; flex-direction: column; min-height: 88%; border-radius: 5px;">
 					<span class="clsbtn orbi" style="cursor: pointer;">X</span>
 					<div style="min-width: 200px; width: 100%; height: 100%; background-image: url(https://i.pinimg.com/originals/bc/c2/3c/bcc23c62544224bc5133a8f0b728fc99.jpg); background-position: center; background-size: cover;" alt=""></div>
-					<div style="width: 100%; display: flex; justify-content: center;">
+					<div class="downRes">
 						<a class="anchor" style="color: red" href="" download><i class="fas fa-file-download fa-3x"></i></a>
+						<span class="tooltiptext">Download my resume as PDF!</span>
 					</div>
 				</div>
 			</div>
