--- a/templates/about.html
+++ b/templates/about.html
@@ -45,10 +45,10 @@
 			  <p><span id="btn" style="font-size: 16pt; cursor: pointer; border: solid 1px black;">View my resume</span></p>
 			  <p><a style="font-size: 16pt; cursor: pointer; border: solid 1px black;" href="/contact">Contact me</a></p>
 			</div>
-			<div id="modal" style="display: none; height: 99vh">
-				<div class="modal-content" style="display: flex; justify-content: center; max-width: 400px; max-height: 660px; flex-direction: column; min-height: 88%; border-radius: 5px;">
+			<div id="modal" style="display: none; height: 99vh; min-height: 750px">
+				<div class="modal-content" style="display: flex; justify-content: center; max-width: 400px; max-height: 660px; flex-direction: column; border-radius: 5px;">
 					<span class="clsbtn orbi" style="cursor: pointer;">X</span>
-					<div style="min-width: 200px; width: 100%; height: 800px; background-image: url(https://i.pinimg.com/originals/bc/c2/3c/bcc23c62544224bc5133a8f0b728fc99.jpg); background-position: center; background-size: cover;" alt=""></div>
+					<div style="min-width: 200px; width: 100%; height: 800px; background-image: url(https://i.pinimg.com/originals/bc/c2/3c/bcc23c62544224bc5133a8f0b728fc99.jpg); background-position: center; background-size: cover; background-position: center;" alt=""></div>
 					<div class="downRes">
 						<a class="anchor" style="color: red" href="" download><i class="fas fa-file-download fa-3x"></i></a>
 						<span class="tooltiptext">Download my resume as PDF!</span>
