naver to around from between

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Spaced_Out</title>
+	<title>Ivan Alvarez</title>
 
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='modalbox.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='flexbox.css') }}">
@@ -27,7 +27,7 @@
       }  
     .naver {
       display: flex; 
-      justify-content: space-between; 
+      justify-content: space-around; 
       flex-wrap: wrap;
       width: 35%;
     }
