increase top and bottom padding in projects nav

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<nav class="row spaced pressStart">
+<nav style="padding: 10px 0; font-size: 12pt;" class="row spaced pressStart">
 	<div class="menu lrg">
 		<div style="display: flex; justify-content: space-between;">
 			<div>Ivan Alvarez</div>
