profile side menu min width in about

--- a/templates/about.html
+++ b/templates/about.html
@@ -41,7 +41,7 @@
 				  <p>and <a class="orbi" href="https://github.com/Alvarian/INTRO" target="_blank">Github</a></p>
 				</div>
 			</div>
-			<div class="down" style="display: flex; align-items: center; justify-content: center; flex-direction: column; background-color: white; flex: 1">
+			<div class="down" style="display: flex; align-items: center; justify-content: center; flex-direction: column; background-color: white; flex: 1; min-width: 150px">
 			  <p><span id="btn" style="font-size: 16pt; cursor: pointer; border: solid 1px black;">View my resume</span></p>
 			  <p><a style="font-size: 16pt; cursor: pointer; border: solid 1px black;" href="/contact">Contact me</a></p>
 			</div>
