--- a/templates/about.html
+++ b/templates/about.html
@@ -21,7 +21,7 @@
 		</nav>
 
 	  <div class="school" style="display: flex; justify-content: center; align-items: center;">
-	  	<h1 style="text-align: center; margin: 0; font-size: 34pt;">Welcome and ...</h1>
+	  	<h1 style="text-align: center; margin: 0; font-size: 38pt;">Welcome and ...</h1>
 	  </div>
 
 	  <div style="justify-content: center; display: flex; flex-direction: column; align-items: center; width: 100%;">
@@ -42,8 +42,8 @@
 				</div>
 			</div>
 			<div class="down" style="display: flex; align-items: center; justify-content: center; flex-direction: column; background-color: white; flex: 1; min-width: 150px">
-			  <p><span id="btn" style="font-size: 16pt; cursor: pointer; border: solid 1px black;">View my resume</span></p>
-			  <p><a style="font-size: 16pt; cursor: pointer; border: solid 1px black;" href="/contact">Contact me</a></p>
+			  <p><span class="anchor" id="btn" style="font-size: 16pt; cursor: pointer; border: solid 1px black; background-color: white">View my resume</span></p>
+			  <p><a class="anchor" style="font-size: 16pt; cursor: pointer; border: solid 1px black; background-color: white" href="/contact">Contact me</a></p>
 			</div>
 			<div id="modal" style="display: none; height: 99vh; min-height: 750px">
 				<div class="modal-content" style="display: flex; justify-content: center; max-width: 400px; max-height: 660px; flex-direction: column; border-radius: 5px;">
