--- a/static/main.css
+++ b/static/main.css
@@ -74,7 +74,46 @@
 .anchor:hover {
 	filter: invert(1);
 }
-
+.dropCard {
+	display: flex; 
+	flex-direction: column; 
+	align-items: center; 
+	position: relative; 
+	justify-content: center; 
+	/*margin-bottom: 100px;*/
+	z-index: 2;
+}
+.dropCard:focus .gitBTN,
+.dropCard:focus-within .gitBTN,
+.dropCard:hover .gitBTN {
+	animation-name: dropGit;
+	animation-duration: 1s;
+	animation-fill-mode: forwards;
+}
+@keyframes dropGit {
+	from {
+		visibility: 0;
+		opacity: 0;
+		margin-top: 0;
+	}
+	to {
+		visibility: 1;
+		opacity: 1;
+		margin-top: 85px;
+	}
+}
+.gitBTN {
+	position: absolute; 
+	z-index: -1; 
+	visibility: 0; 
+	opacity: 0;
+}
+.gitBTN:link {
+	text-decoration: none;
+}
+.gitBTN:visited {
+	text-decoration: none;
+}
 .circle {
 	z-index: 10;
 	border-radius: 50%;
