synop touchup in projects

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,8 @@
 		<h2 class="orb codepro">Synopsis</h2>
 		<div style="height: 70%;" class="pressStart betweened" v-show="synop">
 			<div>
-				<h3 class="title"></h3>
-				<p class="article"></p>
+				<h3 class="title">Hover Over and App! >></h3>
+				<p class="article">Hover over an app! >></p>
 			</div>
 			<div class="type"></div>	
 			<div class="icons"></div>		
