synop touchup in projects

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
 				<h3 class="title">Hover Over an App! >></h3>
 				<p class="article">Hover over an app! >></p>
 			</div>
-			<div class="type"></div>	
+			<div class="type">Hover over an app! >></div>	
 			<div class="icons"></div>		
 		</div>
 
