--- a/templates/index.html
+++ b/templates/index.html
@@ -21,9 +21,9 @@
 
 <h1 class="orb codepro" style="text-align: center;">Project Gallery</h1>
 <div id="app" class="row">
-	<div class="synop">
+	<div style="padding: 0px 10px;" class="synop">
 		<h2 class="orb codepro">Synopsis</h2>
-		<div style="height: 70%;" class="pressStart betweened" v-show="synop">
+		<div style="height: 70%;" class="pressStart betweened">
 			<div>
 				<h3 class="title">Hover Over an App! >></h3>
 				<p class="article">Hover over an app! >></p>
