adjust logging in contact route

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -29,6 +29,8 @@
 			<textarea class="orbi" style=" color: white; background-color: rgba(0,0,0,0.6);" name="message" id="" cols="30" rows="10" placeholder="Whats Up?"></textarea>
 			<input class="orbi" style="font-size: 22pt;  color: white; background-color: rgba(0,0,0,0.5);" type="submit" value="Submit">
 		</form>
+		{% include 'includes/_messages.html' %}
+
 	</div>
 
 {% endblock %}	
