--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Libre+Barcode+39+Text|Orbitron|Press+Start+2P|Ruge+Boogie|Gloria+Hallelujah|Indie+Flower|Play|Source+Code+Pro" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+
 
 	<script
 	  src="https://code.jquery.com/jquery-3.3.1.min.js"
