--- a/templates/about.html
+++ b/templates/about.html
@@ -49,7 +49,7 @@
 				<div class="modal-content" style="display: flex; justify-content: center; max-width: 400px; flex-direction: column; border-radius: 5px; min-height: 570px;">
 					<span class="clsbtn orbi" style="cursor: pointer;">X</span>
 					<div style="width: 100%; display: flex; justify-content: center;">	
-						<div style="min-width: 200px; width: 90%; min-height: 520px; background-image: url(https://i.pinimg.com/originals/bc/c2/3c/bcc23c62544224bc5133a8f0b728fc99.jpg); background-position: center; background-size: cover; background-position: center;" alt=""></div>
+						<div class="resume"></div>
 					</div>
 					<div class="downRes">
 						<a class="anchor" style="color: red" href="" download><i class="fas fa-file-download fa-3x"></i></a>
@@ -91,12 +91,11 @@
 	  		<h1 style="text-align: center; margin: 0; font-size: 34pt; color: wheat">Incorporated...</h1>
 		</div>
 
-		<div class="float" style="display: flex; justify-content: space-around; margin: 70px 30px;">
+		<div class="float" style="display: flex; justify-content: space-around; padding: 70px 0px; width: 100%;">
 		  <div class="bord">
 			<h2>Commonly Used</h2>
 			<div class="loopUsed">
 				<i class="badges devicon-javascript-plain colored"></i>
-				<i class="badges devicon-jquery-plain-wordmark colored"></i>
 				<i class="badges devicon-nodejs-plain colored"></i>
 				<i class="badges devicon-css3-plain colored"></i>
 				<i class="badges devicon-html5-plain colored"></i>
@@ -109,6 +108,7 @@
 			<div class="loopUnderstood">
 				<i class="badges devicon-redis-plain colored"></i>
 				<i class="badges devicon-postgresql-plain colored"></i>
+				<i class="badges devicon-jquery-plain-wordmark colored"></i>
 				<i class="badges devicon-mongodb-plain-wordmark colored"></i>
 				<i class="badges devicon-mysql-plain-wordmark colored"></i>
 			</div>
