adjust resume download

--- a/templates/about.html
+++ b/templates/about.html
@@ -52,7 +52,7 @@
 						<div class="resume"></div>
 					</div>
 					<div class="downRes">
-						<a class="anchor" style="color: red" href="" download><i class="fas fa-file-download fa-3x"></i></a>
+						<a class="anchor" style="color: red" href="{{ url_for('static', filename='./images/IVANALVAREZ2019.pdf') }}" download><i class="fas fa-file-download fa-3x"></i></a>
 						<span class="tooltiptext">Download my resume as PDF!</span>
 					</div>
 				</div>
