--- a/templates/contact.html
+++ b/templates/contact.html
@@ -21,8 +21,9 @@
 
 	<div style="display: flex; flex-direction: column; align-items: center; justify-content: center; background-image: url('{{ url_for('static', filename='images/img_highest.jpg') }}'); height: 100vh; background-repeat: no-repeat; background-size: cover;">
 		<h1 class="orbi">Contact</h1>
-		{% include 'includes/_messages.html' %}
-		
+		<div class="orbi">
+			{% include 'includes/_messages.html' %}
+		</div>
 		<form style="display: flex; flex-direction: column; width: 40%; min-width: 300px;" action="/contact" method="POST">
 			<input class="orbi" style="font-size: 22pt;  color: white; background-color: rgba(0,0,0,0.6);" name="name" type="text" placeholder="Your name">
 			<input class="orbi" style="font-size: 22pt;  color: white; background-color: rgba(0,0,0,0.6);" name="email" type="email" placeholder="Your email">
