--- a/templates/about.html
+++ b/templates/about.html
@@ -21,13 +21,13 @@
 		</nav>
 
 	  <div class="school" style="display: flex; justify-content: center; align-items: center;">
-	  	<h1 style="text-align: center; margin: 0; font-size: 38pt;">Welcome and ...</h1>
+	  	<h1 class="welcome">Welcome and ...</h1>
 	  </div>
 
 	  <div style="justify-content: center; display: flex; flex-direction: column; align-items: center; width: 100%;">
 		<div style="width: 100%;">
 		  <div class="float" style="display: flex; justify-content: space-around; width: 100%;">
-			<div style="display: flex; margin: 0px 100px">
+			<div class="des">
 				<div style="display: flex; height: 100%; justify-content: center; align-items: center;">
 					<div class="icon"></div>
 				</div>
@@ -128,7 +128,7 @@
 	<div style="position: relative;">
 		<div style="position: absolute;" class="theLib"></div>
 		<div style="display: flex; justify-content: center; align-items: center; width: 100%;">
-			<div style="display: flex; justify-content: space-around; align-items: center; min-height: 400px; width: 70%; flex-wrap: wrap; z-index: 1">
+			<div class="footerBtns">
 				<a href="https://github.com/Alvarian/INTRO" class="circle anchor" target="_blank"><i class="fab fa-github"></i></a>
 				<a href="https://www.linkedin.com/in/alvarezivan88/" class="circle anchor" target="_blank"><i class="fab fa-linkedin-in"></i></a>
 				<a class="circle anchor scrollUp"><i class="fas fa-arrow-up"></i></a>
