--- a/static/main.css
+++ b/static/main.css
@@ -329,7 +329,7 @@ body {
   	background-size: cover;
   	background-position: center;
   	background-repeat: no-repeat;
-  	background-attachment: scroll;
+  	background-attachment: fixed;
 	min-height: 100vh;	
   }
   .theLib {
