--- a/static/main.css
+++ b/static/main.css
@@ -307,6 +307,9 @@ body {
 	text-align: center; margin: 0; font-size: 38pt;
 }
 @media only screen and (max-width: 600px) {
+  body { 
+	max-width: 600px;
+  }
   .circle {
     margin: 0px 30px;
 	height: 90px;
