--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,7 +19,7 @@
 		</div>
 	</nav>
 
-	<div style="display: flex; flex-direction: column; align-items: center; justify-content: center; background-image: url('{{ url_for('static', filename='images/img_highest.jpg') }}'); height: 100vh; background-repeat: no-repeat; background-size: cover;">
+	<div style="display: flex; flex-direction: column; align-items: center; justify-content: center; background-image: url('{{ url_for('static', filename='images/img_highest.jpg') }}'); height: 100%; background-repeat: no-repeat; background-size: cover;">
 		<h1 class="orbi">Contact</h1>
 		<div class="orbi">
 			{% include 'includes/_messages.html' %}
