--- a/static/main.css
+++ b/static/main.css
@@ -357,7 +357,7 @@ body, html {
 	margin: 0;
 	height: 100%;
 	width: 100%;
-	/*min-width: 450px;*/
+	min-width: 400px;
 }
 nav {
 	background-color: white
