--- a/static/main.css
+++ b/static/main.css
@@ -310,6 +310,9 @@ body {
   body { 
 	max-width: 600px;
   }
+  .naver {
+
+  }
   .circle {
     margin: 0px 30px;
 	height: 90px;
@@ -357,7 +360,7 @@ body, html {
 	margin: 0;
 	height: 100%;
 	width: 100%;
-	min-width: 400px;
+	min-width: 300px;
 }
 nav {
 	background-color: white
